# ideator-books

./: .env.example  .gitignore  AGENTS.md  README.md  TODOs.md  pyproject.toml  vibe-codingideator-books
.cursor/rules/: backend-api.mdc  database-schema.mdc  frontend-pages.mdc  kb-processing.mdc  langgraph-pipeline.mdc  llm-model-evaluation.mdc  quality-improvement.mdc  supabase-migration.mdc
backend/: __init__.py  main.py
backend/core/: __init__.py  auth.py  config.py  constants.py  database.py  models_config.py
backend/langgraph_pipeline/: __init__.py  graph.py  state.py  utils.py
backend/models/: schemas.py
backend/scripts/: create_test_user.py  load_kb_to_db.py
backend/services/: book_service.py  kb_service.py  run_service.py
backend/sql/: README.md  create_test_user.sql  schema.sql
backend/tests/: check_models.py  test_api_e2e.py  test_database_schema.py  test_database_simple.py  test_integrated_knowledge.py  test_kb_parser.py  test_langgraph_pipeline.py  test_phase1_5_quality.py
backend/tools/: __init__.py  kb_search.py
docs/: 100권 노션 원본.csv  100권 노션 원본_수정.csv  1p사례.md  PRD_ideator-books.md  QUALITY_METRICS.md  cursor-master-sequence.md  cursor-operation.mdc  simple.md  sysnthesis.md  지식베이스생성_경제경영_구글스튜디오.md  지식베이스생성_과학기술_구글스튜디오.md  지식베이스생성_역사사회_구글스튜디오.md  지식베이스생성_인문자기계발_구글스튜디오.md  프로젝트본질.md
frontend/: middleware.ts  package-lock.json  package.json
frontend/app/: layout.tsx  providers.tsx
frontend/components/: book-filter.tsx  book-list.tsx  book-selection-panel.tsx  csv-upload.tsx  fusion-card.tsx  history-card.tsx  (+2 more)
supabase/: config.toml
(+35 files in other folders)
