[tool.poetry]
name = "ideator-books"
version = "0.1.0"
description = "KB-based 1-pager generation service using LangGraph"
authors = ["bluecalif"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"

# LangChain 핵심 패키지
langchain = "0.*"
langchain-core = "0.*"
langchain-openai = "0.*"
langchain-community = "0.*"
langchain-text-splitters = "0.*"
langgraph = "0.*"
langsmith = "0.*"
openai = "1.*"

# 데이터 처리
pandas = "2.*"
scikit-learn = "1.*"

# 기본 유틸리티
python-dotenv = "1.*"
pydantic = "2.*"
pydantic-settings = "2.*"
tiktoken = "0.*"
tenacity = "8.*"

# FastAPI 및 웹
fastapi = "0.*"
uvicorn = {version = "0.*", extras = ["standard"]}
python-multipart = "0.*"
httpx = "0.*"

# Supabase
supabase = "2.*"
postgrest = "0.*"

# PDF 생성
reportlab = "4.*"

# 개발 도구
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
